add trashbin icon

--- a/todos/templates/index.html
+++ b/todos/templates/index.html
@@ -1,9 +1,10 @@
 {% include 'partials/header.html' %}
 <ul>
+    {% load static %}
     {% for todo in todos %}
     {% csrf_token %}
     <li><a href="/todos/details/{{todo.id}}">{{todo.title}}</a>: {{todo.text}}
-    &emsp;<a href="/todos/delete/{{todo.id}}">(Delete)</a>
+        &emsp;<a href="/todos/delete/{{todo.id}}"><img src="{% static "icons/trashbin.jpg" %}" alt="(Delete)" style="width:30px;height:30px;"></a>
     </li>
     {% endfor %}
 </ul>
