Add authentication checks in views.py

--- a/todos/templates/partials/header.html
+++ b/todos/templates/partials/header.html
@@ -9,6 +9,8 @@
     <body>
         <header>
             <h1>TodoList</h1>
+            {% if user.is_authenticated %}
             <a href="/todos/add">Add Todo</a>
+            {% endif %}
             <hr>
         </header>
